bin/tests/snapshots/structured_text_file__911c182a6f2e6e89dd39729eaf503a83_lint_json.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeTextFile { name = "x.ini"; text = ''
  [main]
  key = ${value}
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "structured_text_file",
      "note": "Structured file written as text",
      "code": 32,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 45
            },
            "to": {
              "line": 4,
              "column": 3
            }
          },
          "message": "`x.ini` is written as INI text",
          "suggestion": null,
          "fixable": false,
          "help": "Generate the file from a Nix value: `(pkgs.formats.ini { }).generate \"x.ini\" { ... }`. Interpolated values are then quoted and escaped, and the file is always well formed. `pkgs.formats` has json, yaml, toml and ini; `lib.generators` has more."
        }
      ]
    }
  ]
}
