bin/tests/snapshots/structured_text_file__911c182a6f2e6e89dd39729eaf503a83_lint_stderr.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeTextFile { name = "x.ini"; text = ''
  [main]
  key = ${value}
''; }
---
[structured_text_file] Warning: Structured file written as text
   ╭─[ <temp_file_path>:1:45 ]
   │
 1 │ ╭─▶ pkgs.writeTextFile { name = "x.ini"; text = ''
   ┆ ┆   
 4 │ ├─▶ ''; }
   │ │           
   │ ╰─────────── x.ini is written as INI text
───╯
