bin/tests/snapshots/structured_text_file__91cea3ceca255101284851bb78c9674f_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  cat >> pyproject.toml <<EOF
  [tool.x]
  a = 1
  EOF
''
---
