bin/tests/snapshots/structured_text_file__92541835f8479fd1dbffe7096002dadc_lint_stderr.snap
---
source: bin/tests/structured_text_file.rs
---
{ systemd.services.x.script = ''
  cat > /var/lib/x/local.yaml <<EOF
  ${lib.optionalString (f != null) ''
    secrets:
      x: '$(cat ${f})'
  ''}
  listen: 80
  EOF
''; }
---
