bin/tests/snapshots/structured_text_file__9b288c1d1655b1ecded30955713cf0da_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeText "config.json" (builtins.toJSON { port = 80; })
---
