bin/tests/snapshots/structured_text_file__9ce036c58c4787a69fe2c729d8ee8bad_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.writeText "docs.yaml" ''
  ---
  ${lib.concatMapStringsSep "\n---\n" builtins.toJSON docs}
''
---
