bin/tests/snapshots/structured_text_file__b1e51708f7363612f1266dc58912d39a_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  echo '${builtins.toJSON versions}' > $out/installed.json
''
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,3 +1,3 @@
 pkgs.runCommand "x" { } ''
-  echo '${builtins.toJSON versions}' > $out/installed.json
+  echo '${builtins.toJSON versions}' > "$out"/installed.json
 ''
