bin/tests/snapshots/structured_text_file__b1e51708f7363612f1266dc58912d39a_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  echo '${builtins.toJSON versions}' > $out/installed.json
''
---
<temp_file_path>>2:40:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
