bin/tests/snapshots/structured_text_file__b1e51708f7363612f1266dc58912d39a_lint_stderr.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  echo '${builtins.toJSON versions}' > $out/installed.json
''
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:40 ]
   │
 2 │   echo '${builtins.toJSON versions}' > $out/installed.json
   │                                        ──┬─  
   │                                          ╰─── SC2086: Double quote to prevent globbing and word splitting.
───╯
