bin/tests/snapshots/structured_text_file__d885bfad1ad381ddd6b1e2dc0b59116b_fix.snap
---
source: bin/tests/structured_text_file.rs
---
{ files."settings.yaml".text = ''
  a: 1
  b: 2
''; }
---
